--- a/index-START.html
+++ b/index-START.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="js-clock.js" defer></script>
 </head>
 <body>
 
